synthetic data fixes

--- a/workflow/clinic_data/clinic_BIO/seqclean.in
+++ b/workflow/clinic_data/clinic_BIO/seqclean.in
@@ -1,276 +1,5 @@
-I need a clinic for covid shots.
-I need something in the center.
-The north part of town
-Sorry, I've been all over the place. To be clear, I need a clinic for covid shots that offers pfizer and is in the center.
-yes please recommend one. the booking is needed for monday, 9:30 am, 5 people
-Ok great. Can you book a room for 5 people at 9:30 am on monday.
-My name is Riley Norman and number is 7103594862.
-Can you assist me in finding me a clinic in east gilroy where I can get covid shots.
-I'd like moderna.
-Can you make me an appointment for Wednesday please for 3 people?
-We prefer 9:30am. Please book for 3 on Wednesday and provide the reference number.
-My name is Mike Morley and number is 3501794862.
-Thanks so much!
-No, that will be all. Thank you!
-Thanks for all the help.
-I need a clinic with flu shots. I am in south part of the town.
-Yes, please book an appointment it for Thursday at 14:00 hours for 2 people.
-My name is Bruce Longbottom and number is 3015794862.
-I live in the center of town and want to see if I can find a clinic to get flu shots for my family.
-That sounds like it might work. Could you check availability for 2 people this week in the morning?
-I am unsure at this time.
-Can you tell me what the address is?
-Does this clinic offer covid shots as well?
-You have been very helpful. I have everything I need, thanks. Bye
-I am looking for information in Burlingame. I need a clinic.
-covid shots.
-are there a flu clinics in Center?
-nope, you choose one for me. Can I please have the phone number?
-No thank you that will be all
-No thank you! Thanks for your help! Bye!
-I'm looking for a particular clinic. Its name is called Health First.
-I'd like to to book an appointment for 4 people at 13:15 on tuesday
-My name is Jacob Willis and number is 5793014862.
-Not at this time. Thank you.
-I'm looking for a local clinic in the center that offers covid shots.
-I need the address, post code and the phone number.
-could you please book an appointment for 5 people and get me the reference number.
-friday at 16:00 pm.
-I am John Hemsworth and number is 4873012732.
-No, this is all I will need. Thank you.
-My husband and I are seeking to get covid shots and looking for a clinic.
-I would prefer west.
-yes moderna please.
-Yes, please! book it at 8:00 am on Monday for the two of us!
-I am Megan Fernandez and my phone number is 4087317239.
-Thanks so much. That is all I need for today. Bye.
-I need a clinic to get flu shots for 2 on monday at 11:30.
-east please.
-I am Kevin Fu and my phone number is 7298047239.
-Nope, that is everything! Thanks!
-I'm looking for a place to get covid shots in the south of town.
-novavax please.
-ye s please.
-could you plea se share address and phone nu mber?
-No, that is all. Thank you! Goodbye!
-I'm looking for an covid clinic in the center.
-Yes, novavax please.
-What about a clinic that offers pfizer?
-I don't have a preferen ce.
-I would like to book for Tuesday at 12:45.
-Yes. Just one person.
-I am Benson Thomas and my phone number is 4727298039.
-Perfect, thank you!
-No, thank so much for all your help.
-I want general information on clinics to go in the west area of town.
-I need one that offers moderna covid shots? I'll need the address, phone and postcode please.
-Okay. I need to book an appointment for 6 on monday at 9:00 am please.
-I am Kevin Moyer and my phone number is 7227801339.
-No. You took care of everything. Thanks. Goodbye.
-i want information about a clinic in the center of the town that offers covid shots?
-I don't need an appointment right now, but I do need the postcode and phone number for that clinic.
-cool, thanks. i don't need anything more. see ya!
-I'm looking to covid shots for my family. Are there facilities that cater to that?
-Do you have anything like that in the center?
-What about south part of the town?
-Ye s please, and I'm going to need the address.
-What i s their address?
-Yeah, can you book appointment for 4 on monday for me?
-8:30 am in the morning.
-I am Brandon Southee and my phone number is 2787201339.
-Thanks a bunch! I couldn't have done it without you. Bye.
-Are there any clinics in the east part of town that offer covid shots?
-I want moderna.
-address?
-could you book it on wednesday at 13:00
-Just one person please and I need a reference number
-Mike Atherton and 9012787339
-Great, thank you. That is all I need.
-Thanks again for your help.
-I need flus shot appointment in east san bruno
-I'd like it on Thursday 15:00 for 1 person.
-No hold off on booking for now. Can you share address and phone number?
-Nope, that was all I needed. Thank you very much!
-Hello, I am looking for a clinic in moraga. I believe it is called Golden Eagle.
-Can you book me an appointment for 11:00 on Friday?
-Actually, for 4, please.
-I am Michelle Strauss and contact number is 2790187339
-Thanks for the service, good day.
-Hi, I'm looking for a clinic to get covid shots. I prefer pfizer.
-I am in the west part of the town.
-Okay, please book that for 3 people at 10:00 am on Friday.
-Sure, I am Jim Wasser and 6347289046 is my phone number.
-Thank you so much for your help.
-I am looking for a clinic to get flu shots in the north of the city.
-yes please.
-I think that would be fine.
-I would like it book for Saturday for 5 people at 9:00. Can I have the booking reference please.
-Sure, I am Joey Bela and phone is 4890726346.
-Thank you, I think that is all I need for today.
-I need a place to get covid shots in center of the city.
-I need to get the address please.
-Great. That was it. Thank you.
-No thanks again for all of your help
-I need to reserve an appointment at Northside Bay clinic, can you help me?
-I need the booking for Tuesday.
-There will be 3 of us and 9:45 would be great.
-Sure, I am Jim Wyatt and phone is 4726389046.
-Thank you so much.
-No, that will be all. Thanks.
-I am looking for clinic in east milpitas
-I need to get family vaccinated for flu shots. can you book it for me please?
-Can you book this for 3 people on tuesday morning at 8:00? Reference please?
-I am Mikah Schneider and phone is 3813456770.
-No, that's all I needed today. Thanks for your help, it's much appreciated.
-I need a clinic at 10:00 on wednesday for 2 people.
-covid shots.
-novavax
-west and share the reference number please.
-I'm Nancy Drew and my phone is 4088044800
-Thank you. I think that's all I need.
-I need to get pfizer covid shots tuesday at 13:30. Can you book it for me?
-center please
-Yes that is perfect. Can you book that and give me a reference number?
-my name is Ron Balboa and my number is 5102209382
-No, I think that's going to be all I needed. Thanks. Have a good day.
-I would like to find a clinic to get covid shots. Do you have any suggestions?
-Do they offer moderna vaccine?
-Yes, please book for 5 people at 9:00 am on Thursday.
-How about wednesday
-Wednesday at 11:00 am?
-Mickey Wong and 6483917234
-Thank you so much. Good bye
-I am looking for a place to get flu shots in the center.
-Is there a clinic located in the north then?
-Yes please. I would need name and phone number.
-No, that's all I needed. Thank you!
-I am looking for a clinic to get pfizer covid shot.
-I'd like it to be in the north.
-Yes, please book it for 1 on monday at 13:00 pm.
-myself Jack Brown and my phone is 9257364729
-No that is all. Thanks for your help!
-I'm looking for a place to get covid shot. I would like it to be in the center.
-I'm looking for moderna.
-Please book the East Bay clinic for me.
-Yes, it's for 4 people. 12:45 on Monday. I would like the reference number, if it is available.
-Yes please book excel clinic.
-Sure, I am Jackson Spears and my contact number is 8249846372.
-That will be all. Thank you very much.
-I would like to find out information about a clinic called Parkmont clinic.
-Yes please. It'll be for 4 people on monday at 9:00 am.
-Heather Rose and 4285432345
-Thank you. Can I get a reference number for the booking?
-That's all for now. Thank you for all your help.
-I need a clinic that offers covid shots, thank you
-I'm looking for something that offers pfizer actually.
-Yes please book the Archway clinic.
-I want appointment on tuesday at 8:00 am for three people.
-My name is James Bond and number is 1112347007
-Thank you very much! That's all I need today!
-Hi, I need moderna covid shots for a family of 3 in the south of town.
-Yes please. May I book an appointment 16:00 on Wednesday and get a reference number please?
-Yes, for 3 people please. Could I also get a reference number?
-Helena Yates and my number is 8635637482.
-thank you, that is all I need.
-We need covid shot clinic on the west side of town.
-I want novavax.
-Yeah, can you check the south please?
-What a bummer. Find me a clinic that offers moderna food on the West please.
-yes please. I will need their phone number and address.
-Thanks so much. That will be all the information I need today. Bye.
-I am seeking a clinic in napa
-I'm actually looking to book a specific clinic. It is called the Napa Valley clinic.
-I'd like to book it on Wednesday, it will be at 9:00 am in the morning, and it will be 4 people.
-My name is Charles Knight and my number is 5109752347.
-No thank you. Goodbye.
-I'm looking for a clinic in the east. I need to get covid shots.
-yes very much. please book it for me for three people.
-I want it on Tuesday noon at 1:00 pm.
-Can you see if they have 3:00 pm available on same day?
-yes, my name is Jennifer Capriati and phone is 8253467823.
-Awesome, thanks! I think that takes care of everything I needed.
-I'm looking for a clinic that offers covid shots.
-I would like a clinic in the center and it should offer novavax.
-Yes, that would be fine. Could you suggest one?
-Okay may I please have the phone number?
-Thank you very much.
-No thank you that will be all
-Let's find me an clinic to get flu shots in the west
-How about you pick one and make an appointment for 5 on thursday at 11:45, and I'll need that reference number too.
-yes, I am Steve Trush and phone is 9256347283.
-Thank you very much.
-No, that's all. Good bye
-I would like to get covid shots in the center of town.
-How about Moderna?
-great. I'd like to book an appointment for 1 at 16:15 on Tuesday.
-sure, I am Susan Sarandon and my phone is 9427442491.
-Nope that's all I needed! Thanks!
-Can you help me find a clinic to get pfizer covid shots?
-west side please.
-It doesn't matter. Like I told you, you can pick one for me.
-Okay I would like to make a booking for 2 people at 10:00 am on wednesday.
-Yes, of course.
-Brad Hogg and my number is 2245718243
-That is all. Thanks for your time.
-I don't know if this is possible but can you please get me some information on the Nominal Healthcare clinic?
-Ah, I just wanted to know it offers covid shots. if yes, could you book me an appointment?
-3:00 pm on friday.
-No, I would like it for 4 people.
-Julia Clobber and my phone number is 10827346284.
-Great, thanks so much, that's all I need! Have a great day!
-I need a place to get covid shots.
-In the center, please.
-i want novavax.
-I am fine with pfizer also. please pick one for me.
-Yes please. Can you book that for 5 people on Saturday at 13:30?
-Vicky Henson and my number is 8724857489.
-Okay, thank you.
-If Saturday fails, try Monday and provide the reference number.
-Nope, that's all for now. Thank you for all your help.
-I am seeking a covid clinic in santa monica
-I need a clinic that offers covid shots on friday anytime after 13:00
-No area doesn't matter and i prefer moderna. Can you pick one, and make me a booking for three people? I need a reference number too!
-my name is Nick Morley and phone is 7394727393.
-Thank you. Thats all I need for today.
-Hello, I'm looking for a clinic to get flu shots. I'd like a place in east part of the town, please.
-That's fine. Can you book it for 2 people at 11:30 am on Thursday?
-Dillon Straight and phone number is 7234522124
-No thank you. I appreciate all your help.
-I need a covid shot appointment on Tuesday for 3 at 11:15am.
-I prefer moderna in the east part of the town.
-yes please.
-My name is John Cusack and my number is 8652312234. I will need the reference number.
-No thank you. That's all I need for now.
-Hi, I am looking to get flu shots for the family and could use some help with a particular clinic.
-I'm looking for Milton Park clinic.
-Can I get the address, phone and postcode please?
-Great! Thank you! That's all I needed.
-Hi, can you recommend a covid shot clinic for me?
-I'd like it to be in the center please.
-it doesn't really matter as long as it is located in the center. I need phone number and address.
-Great, thank you. That is all that I need.
-I am looking for a clinic to get covid shot. Can you find a one that offers novavax vaccine in the north?
-please choose one that includes offers moderna.
-Yes it works. please book for 1 person at 10:00 am on Thursday.
-name is Jeremy Letts and phone number is 5723452736.
-Would 11:00 am on thursday work instead? If it does could I get the reference number please?
-That will be all. Thank you."
-Can you help me in finding a clinic to get flu shots please?
-Yes, I'd prefer north part of town please.
-I'll take the The Method please.
-Yes. I want to book it for 2 people on Friday at 7:30 am.
-my name is Robert James and phone number is 7342497354
-No that's all. Good bye!
-Hi, I want a clinic for moderna covid shots located in the south part of town.
-address and postcode please
-No, thank you, goodbye.
-I would like clinic to get covid shots in east santa clara.
-I do not have a preference of vaccine. Please make a suggestion.
-Can I get the address and phone number?
-No, thank you. Good bye.
-Hi! Would you please help me find a clinic for covid shots?
-It needs to be in center of the town
-I prefer moderna. Please pick one and get me a booking for 3 people on Friday at 8:30 am.
-my name is Jessica Pommer and phone number is 9254327586
-No thanks, that will be everything.
-Thank you for your time goodbye!
+I am looking for a clinic. I would like something that offers flu shots.
+Yes, could you make an appointment for 1 at 10:00 on Saturday?
+My name is Jason Bourne and number is 2103594867.
+Thank you so much for your help!
+Thanks, you too. Goodbye.
