--- a/workflow/clinic_data/clinic_BIO/train/seqclean.in
+++ b/workflow/clinic_data/clinic_BIO/train/seqclean.in
@@ -1,32 +1,36 @@
-I am looking for a clinic. I would like something that offers covid shots.
-Yes, could you book an appointment for 2 at 13:00 on friday?
-yes, pfizer please.
-My name is Sheila Brown and number is 8103594267.
-Thank you so much for your help!
+Can you help me find a covid shot clinic?
+I'm interested in clinics located in the East that offers moderna.
+Yeah, could you book it for 3 people on Monday? I think 16:15 is when we want to be there.
+My name is Mike Dudley and number is 2103564897.
+No, that's all for me today! Thank you! Bye!
 I need a clinic for covid shots.
-I need something in the center.
+I need something in the centre.
 The north part of town
-Sorry, I've been all over the place. To be clear, I need a clinic for covid shots that offers pfizer and is in the center.
+Sorry, I've been all over the place. To be clear, I need a clinic for covid shots that offers pfizer and is in the centre.
 yes please recommend one. the booking is needed for monday, 9:30 am, 5 people
 Ok great. Can you book a room for 5 people at 9:30 am on monday.
 My name is Riley Norman and number is 7103594862.
-Hi, I'm looking for a clinic to get covid shots. I prefer pfizer.
-I am in the west part of the town.
-Okay, please book that for 3 people at 10:00 am on Friday.
-Sure, I am Jim Wasser and 6347289046 is my phone number.
-Thank you so much for your help.
-I need a place to get covid shots.
-In the center, please.
-i want novaform.
-I am fine with pfizer also. please pick one for me.
-Yes please. Can you book that for 5 people on Saturday at 13:30?
-Vicky Henson and my number is 8724857489.
-Okay, thank you.
-If Saturday fails, try Monday and provide the reference number.
-Nope, that's all for now. Thank you for all your help.
-Hi! Would you please help me find a clinic for covid shots?
-It needs to be in center of the town
-I prefer moderna. Please pick one and get me a booking for 3 people on Friday at 8:30 am.
-my name is Jessica Pommer and phone number is 9254327586
-No thanks, that will be everything.
-Thank you for your time goodbye!
+Great, thank you.
+Thank you. I am all set.
+I'm looking for an covid clinic in the centre.
+Yes, novaform please.
+What about a clinic that offers pfizer?
+I don't have a preference.
+I would like to book for Tuesday at 12:45.
+Yes. Just one person.
+I am Benson Thomas and my phone number is 4727298039.
+Perfect, thank you!
+No, thank so much for all your help.
+I'm looking for a place to get covid shot. I would like it to be in the centre.
+I'm looking for moderna.
+Please book the East Bay clinic for me.
+Yes, it's for 4 people. 12:45 on Monday. I would like the reference number, if it is available.
+Yes please book excel clinic.
+Sure, I am Jackson Spears and my contact number is 8249846372.
+That will be all. Thank you very much.
+I am looking for a clinic to get covid shot. Can you find a one that offers novaform vaccine in the north?
+please choose one that includes offers moderna.
+Yes it works. please book for 1 person at 10:00 am on Thursday.
+name is Jeremy Letts and phone number is 5723452736.
+Would 11:00 am on thursday work instead? If it does could I get the reference number please?
+That will be all. Thank you."
