--- a/workflow/clinic_data/clinic_BIO/test/seqclean.in
+++ b/workflow/clinic_data/clinic_BIO/test/seqclean.in
@@ -17,8 +17,8 @@ My name is Michael Jackson and number is 7103594862.
 No that is all I need. Thank you for your time.
 i am looking for a clinic in the west that offers covid shots
 Any brand would be fine. Could I get the phone number for your recommendation?
-Sounds good, could I ge t that phone number?
-Yes. Can you book an appoin tment for me?
+Sounds good, could I get that phone number?
+Yes. Can you book an appointment for me?
 i want to book it for 2 people at 9:00 am on saturday.
 My name is Mickey Salvador and number is 2503194867.
 That is all I need to know. Thanks, good bye.
@@ -29,16 +29,21 @@ My name is Novak Djokivic and number is 2903514867.
 How about for 11:00 am on tuesday?
 Great. I am all set then. Have a nice day. Bye.
 Hi there! I need a clinic in the east offers flu shots.
-No, I don't hav e a pre ference, but I need the phone number and postal code.
+No, I don't have a preference, but I need the phone number and postal code.
 No, right now, I just need the info. Thanks!
 That is all. thanks
 I am looking for a clinic named Eastern Health.
-I would lik e to book an appointment for it. Can you help me with that?
+I would like to book an appointment for it. Can you help me with that?
 i need flu shots.
 I need it for Thursday at 11:00 am.
 for 4 people.
 I am Brad White and number is 2301594867.
 that is it thank you.
+I am looking for a clinic. I would like something that offers covid shots.
+Yes, could you book an appointment for 2 at 13:00 on friday?
+yes, pfizer please.
+My name is Sheila Brown and number is 8103594267.
+Thank you so much for your help!
 I am looking for Riverside clinic.
 Yes, I would like to book it on Tuesday at 13:00 and get a reference number.
 My name is Ronald Sanchez and number is 6103594827.
@@ -49,11 +54,11 @@ Thanks for everything you have been great!
 No that is all I needed. Thank you ever so kindly.
 I'm looking for an flu shot clinic in the centre if you could help me.
 No, not really. Could you suggest something?
-Yes, I would like both the phone number and the post code please.
+Yes, I would like both the phone number and the postcode please.
 that is it for today. good day thank you
 Hi, I'd like to find a clinic for covid shots in the south?
 The Lucky Star sounds good. That's all I need.
-Can you a l so tell me the postcode?
+Can you also tell me the postcode?
 Thanks for your help. Good bye.
 I want to find a clinic in the west that offers flu shots. Can i also have the address, phone number and its zip code?
 thank you goodbye
@@ -72,12 +77,12 @@ I would prefer pfizer but moderna would be good as well. I will need the phone n
 Thanks for helping me with this. I appreciate it! Goodbye!
 I need a clinic to get covid shots.
 could you provide details for something that offers pfizer?
-No, I have no preferen ce. Just pick one. That will be fine.
+No, I have no preference. Just pick one. That will be fine.
 Perfect. please book it for 1 person at 9:00 am on tuesday.
 My name is Eric Emmons and number is 5103294867.
 Nope, that's it. Thanks!
 I would like to book a clinic in north for flu shots.
-No, I don't really care. Just something in the north that o ffers flu shots.
+No, I don't really care. Just something in the north that offers flu shots.
 Great!! Let get a booking for 2 people at 9:30 am on thursday.
 My name is Claude Spell and number is 2703594861.
 No, that will be all. Thanks, goodbye.
@@ -90,16 +95,11 @@ That will be all. Thank you for your help!
 Thanks, take care buddy!
 I am looking for a clinic that offers covid shots and in the south part of town.
 Let's go with Pfizer.
-addre ss and phone nu mber please.
+address and phone number please.
 Thank you, goodbye.
-Can you help me find a covid shot clinic?
-I'm interested in clinics located in the East that offers moderna.
-Yeah, could you book it for 3 people on Monday? I think 16:15 is when we want to be there.
-My name is Mike Dudley and number is 2103564897.
-No, that's all for me today! Thank you! Bye!
 I'm looking to get flu shots around the centre of town, can you find me some clinics?
 Hmm... let me think. Let's try maybe somewhere in the south instead.
-not really, what would you recommend? Can I plea se have the address and postcode.
+not really, what would you recommend? Can I please have the address and postcode.
 No, that's all. Thanks.
 I am looking for a particular clinic. Its name is called advantage clinic.
 Yes, and can you book an appointment for 2 at 14:00 on Monday, please.
@@ -119,7 +119,7 @@ I am looking for a clinic.
 Not sure of that, I am looking for a clinic named Nature.
 I would like to book an appointment for 3 people on tuesday at 10:00
 My name is Afsoun Shields and number is 7603594812.
-Yes, a differen t clinic in the same area and one that offers covid shots.
+Yes, a different clinic in the same area and one that offers covid shots.
 vaccine brand doesn't matter. anyone will work.
 That is all. Thank you!
 I am looking for a covid shot clinic in the north side of town
@@ -145,7 +145,7 @@ Yes, I'd like to book an appointment for 1 at 09:15 on Wednesday. Can you do tha
 My name is Ernesto Ruffino and number is 2109534867.
 No. I think I am all set. Thanks.
 Hey, I'm up south can you give me a clinic to get flu shots?
-Can I have the addre ss and telephone number?
+Can I have the address and telephone number?
 THAT WILL BE FINE.
 Can you assist me in finding me a clinic in east gilroy where I can get covid shots.
 I'd like moderna.
@@ -158,6 +158,7 @@ Thanks for all the help.
 I need a clinic with flu shots. I am in south part of the town.
 Yes, please book an appointment it for Thursday at 14:00 hours for 2 people.
 My name is Bruce Longbottom and number is 3015794862.
+That is all I need.
 I live in the centre of town and want to see if I can find a clinic to get flu shots for my family.
 That sounds like it might work. Could you check availability for 2 people this week in the morning?
 I am unsure at this time.
@@ -175,7 +176,7 @@ I'd like to to book an appointment for 4 people at 13:15 on tuesday
 My name is Jacob Willis and number is 5793014862.
 Not at this time. Thank you.
 I'm looking for a local clinic in the centre that offers covid shots.
-I need the address, post code and the phone number.
+I need the address, postcode and the phone number.
 could you please book an appointment for 5 people and get me the reference number.
 friday at 16:00 pm.
 I am John Hemsworth and number is 4873012732.
@@ -192,18 +193,9 @@ I am Kevin Fu and my phone number is 7298047239.
 Nope, that is everything! Thanks!
 I'm looking for a place to get covid shots in the south of town.
 novaform please.
-ye s please.
-could you plea se share address and phone nu mber?
+yes please.
+could you please share address and phone number?
 No, that is all. Thank you! Goodbye!
-I'm looking for an covid clinic in the centre.
-Yes, novaform please.
-What about a clinic that offers pfizer?
-I don't have a preferen ce.
-I would like to book for Tuesday at 12:45.
-Yes. Just one person.
-I am Benson Thomas and my phone number is 4727298039.
-Perfect, thank you!
-No, thank so much for all your help.
 I want general information on clinics to go in the west area of town.
 I need one that offers moderna covid shots? I'll need the address, phone and postcode please.
 Okay. I need to book an appointment for 6 on monday at 9:00 am please.
@@ -215,8 +207,8 @@ cool, thanks. i don't need anything more. see ya!
 I'm looking to covid shots for my family. Are there facilities that cater to that?
 Do you have anything like that in the centre?
 What about south part of the town?
-Ye s please, and I'm going to need the address.
-What i s their address?
+Yes please, and I'm going to need the address.
+What is their address?
 Yeah, can you book appointment for 4 on monday for me?
 8:30 am in the morning.
 I am Brandon Southee and my phone number is 2787201339.
@@ -229,7 +221,7 @@ Just one person please and I need a reference number
 Mike Atherton and 9012787339
 Great, thank you. That is all I need.
 Thanks again for your help.
-I need flus shot appointment in east san bruno
+I need flu shot appointment in east san bruno
 I'd like it on Thursday 15:00 for 1 person.
 No hold off on booking for now. Can you share address and phone number?
 Nope, that was all I needed. Thank you very much!
@@ -238,6 +230,11 @@ Can you book me an appointment for 11:00 on Friday?
 Actually, for 4, please.
 I am Michelle Strauss and contact number is 2790187339
 Thanks for the service, good day.
+Hi, I'm looking for a clinic to get covid shots. I prefer pfizer.
+I am in the west part of the town.
+Okay, please book that for 3 people at 10:00 am on Friday.
+Sure, I am Jim Wasser and 6347289046 is my phone number.
+Thank you so much for your help.
 I am looking for a clinic to get flu shots in the north of the city.
 yes please.
 I think that would be fine.
@@ -286,13 +283,6 @@ I'd like it to be in the north.
 Yes, please book it for 1 on monday at 13:00 pm.
 myself Jack Brown and my phone is 9257364729
 No that is all. Thanks for your help!
-I'm looking for a place to get covid shot. I would like it to be in the centre.
-I'm looking for moderna.
-Please book the East Bay clinic for me.
-Yes, it's for 4 people. 12:45 on Monday. I would like the reference number, if it is available.
-Yes please book excel clinic.
-Sure, I am Jackson Spears and my contact number is 8249846372.
-That will be all. Thank you very much.
 I would like to find out information about a clinic called Parkmont clinic.
 Yes please. It'll be for 4 people on monday at 9:00 am.
 Heather Rose and 4285432345
@@ -353,8 +343,17 @@ I don't know if this is possible but can you please get me some information on t
 Ah, I just wanted to know it offers covid shots. if yes, could you book me an appointment?
 3:00 pm on friday.
 No, I would like it for 4 people.
-Julia Clobber and my phone number is 10827346284.
+Julia Clobber and my phone number is 1082734684.
 Great, thanks so much, that's all I need! Have a great day!
+I need a place to get covid shots.
+In the centre, please.
+i want novaform.
+I am fine with pfizer also. please pick one for me.
+Yes please. Can you book that for 5 people on Saturday at 13:30?
+Vicky Henson and my number is 8724857489.
+Okay, thank you.
+If Saturday fails, try Monday and provide the reference number.
+Nope, that's all for now. Thank you for all your help.
 I am seeking a covid clinic in santa monica
 I need a clinic that offers covid shots on friday anytime after 13:00
 No area doesn't matter and i prefer moderna. Can you pick one, and make me a booking for three people? I need a reference number too!
@@ -377,18 +376,6 @@ Hi, can you recommend a covid shot clinic for me?
 I'd like it to be in the centre please.
 it doesn't really matter as long as it is located in the centre. I need phone number and address.
 Great, thank you. That is all that I need.
-I am looking for a clinic to get covid shot. Can you find a one that offers novaform vaccine in the north?
-please choose one that includes offers moderna.
-Yes it works. please book for 1 person at 10:00 am on Thursday.
-name is Jeremy Letts and phone number is 5723452736.
-Would 11:00 am on thursday work instead? If it does could I get the reference number please?
-That will be all. Thank you."
-Can you help me in finding a clinic to get flu shots please?
-Yes, I'd prefer north part of town please.
-I'll take the The Method please.
-Yes. I want to book it for 2 people on Friday at 7:30 am.
-my name is Robert James and phone number is 7342497354
-No that's all. Good bye!
 Hi, I want a clinic for moderna covid shots located in the south part of town.
 address and postcode please
 No, thank you, goodbye.
@@ -396,3 +383,9 @@ I would like clinic to get covid shots in east santa clara.
 I do not have a preference of vaccine. Please make a suggestion.
 Can I get the address and phone number?
 No, thank you. Good bye.
+Hi! Would you please help me find a clinic for covid shots?
+It needs to be in centre of the town
+I prefer moderna. Please pick one and get me a booking for 3 people on Friday at 8:30 am.
+my name is Jessica Pommer and phone number is 9254327586
+No thanks, that will be everything.
+Thank you for your time goodbye!
