modified clinic data split to 60:20 for train:test

--- a/workflow/clinic_data/clinic_BIO/seqclean.in
+++ b/workflow/clinic_data/clinic_BIO/seqclean.in
@@ -1,5 +1,6 @@
-I am looking for a clinic. I would like something that offers flu shots.
-Yes, could you make an appointment for 1 at 10:00 on Saturday?
-My name is Jason Bourne and number is 2103594867.
-Thank you so much for your help!
-Thanks, you too. Goodbye.
+I am looking for a covid shot clinic in the north side of town
+How about the south side of town?
+Does it offer moderna?
+book it for 3 people on tuesday at 11:00 am.
+My name is Michael Jackson and number is 7103594862.
+No that is all I need. Thank you for your time.
